--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
         <a href="#9" onclick="hra.nacti_level(9);" class="level">9</a>
         <a href="#10" onclick="hra.nacti_level(10);" class="level">10</a>
         <a href="#11" onclick="hra.nacti_level(11);" class="level">11</a>
+        <a href="#12" onclick="hra.nacti_level(12);" class="level">12</a>
+        <a href="#13" onclick="hra.nacti_level(13);" class="level">13</a>
+        <a href="#14" onclick="hra.nacti_level(14);" class="level">14</a>
+        <a href="#15" onclick="hra.nacti_level(15);" class="level">15</a>
+        <a href="#16" onclick="hra.nacti_level(16);" class="level">16</a>
+        <a href="#17" onclick="hra.nacti_level(17);" class="level">17</a>
+        <a href="#18" onclick="hra.nacti_level(18);" class="level">18</a>
+        <a href="#19" onclick="hra.nacti_level(19);" class="level">19</a>
       </div>
 
       <div class="editor">
@@ -196,7 +204,7 @@
       // dostupné instrukce
       this.instrukcni_sada = this.update_available_instructions(levels[level].instrukcni_sada);
 
-      this.workspace.updateToolbox(this.instrukcni_sada);
+      this.workspace.updateToolbox(this.instrukcni_sada);   
       this.nakresli_mapu();
     },
 
@@ -978,8 +986,9 @@ if(window.location.hash) {
 
 //hra.hlaseni(3,1,1,10, "kvok");
 
+
 hra.workspace = Blockly.inject('blockly', {toolbox: toolbox, toolboxPosition: "start",  zoom:
-         {startScale: 0.8}, trashcan: "true", maxInstances:hra.instrukcni_sada, CORNER_RADIUS: 0});
+         {startScale: 0.8}, trashcan: "true", maxInstances:levels[level].instrukcni_sada, CORNER_RADIUS: 0});
 
 // generování kódu
 function myUpdateFunction(event) {
