--- a/index.html
+++ b/index.html
@@ -50,6 +50,22 @@
         <a href="#17" onclick="hra.nacti_level(17);" class="level">17</a>
         <a href="#18" onclick="hra.nacti_level(18);" class="level">18</a>
         <a href="#19" onclick="hra.nacti_level(19);" class="level">19</a>
+        <a href="#20" onclick="hra.nacti_level(20);" class="level">20</a>
+        <a href="#21" onclick="hra.nacti_level(21);" class="level">21</a>
+        <a href="#22" onclick="hra.nacti_level(22);" class="level">22</a>
+        <a href="#23" onclick="hra.nacti_level(23);" class="level">23</a>
+        <a href="#24" onclick="hra.nacti_level(24);" class="level">24</a>
+        <a href="#25" onclick="hra.nacti_level(25);" class="level">25</a>
+        <a href="#26" onclick="hra.nacti_level(26);" class="level">26</a>
+        <a href="#27" onclick="hra.nacti_level(27);" class="level">27</a>
+        <a href="#28" onclick="hra.nacti_level(28);" class="level">28</a>
+        <a href="#29" onclick="hra.nacti_level(29);" class="level">29</a>
+        <a href="#30" onclick="hra.nacti_level(30);" class="level">30</a>
+        <a href="#31" onclick="hra.nacti_level(31);" class="level">31</a>
+        <a href="#32" onclick="hra.nacti_level(32);" class="level">32</a>
+        <a href="#33" onclick="hra.nacti_level(33);" class="level">33</a>
+        <a href="#34" onclick="hra.nacti_level(34);" class="level">34</a>
+        <a href="#35" onclick="hra.nacti_level(35);" class="level">35</a>
       </div>
 
       <div class="editor">
