--- a/index.html
+++ b/index.html
@@ -30,41 +30,15 @@
       </div>
 
       <div class="levels">
-        <a href="#1" onclick="hra.nacti_level(1);" class="level">1</a>
-        <a href="#2" onclick="hra.nacti_level(2);" class="level">2</a>
-        <a href="#3" onclick="hra.nacti_level(3);" class="level">3</a>
-        <a href="#4" onclick="hra.nacti_level(4);" class="level">4</a>
-        <a href="#5" onclick="hra.nacti_level(5);" class="level">5</a>
-        <a href="#6" onclick="hra.nacti_level(6);" class="level">6</a>
-        <a href="#7" onclick="hra.nacti_level(7);" class="level">7</a>
-        <a href="#8" onclick="hra.nacti_level(8);" class="level">8</a>
-        <a href="#9" onclick="hra.nacti_level(9);" class="level">9</a>
-        <a href="#10" onclick="hra.nacti_level(10);" class="level">10</a>
-        <a href="#11" onclick="hra.nacti_level(11);" class="level">11</a>
-        <a href="#12" onclick="hra.nacti_level(12);" class="level">12</a>
-        <a href="#13" onclick="hra.nacti_level(13);" class="level">13</a>
-        <a href="#14" onclick="hra.nacti_level(14);" class="level">14</a>
-        <a href="#15" onclick="hra.nacti_level(15);" class="level">15</a>
-        <a href="#16" onclick="hra.nacti_level(16);" class="level">16</a>
-        <a href="#17" onclick="hra.nacti_level(17);" class="level">17</a>
-        <a href="#18" onclick="hra.nacti_level(18);" class="level">18</a>
-        <a href="#19" onclick="hra.nacti_level(19);" class="level">19</a>
-        <a href="#20" onclick="hra.nacti_level(20);" class="level">20</a>
-        <a href="#21" onclick="hra.nacti_level(21);" class="level">21</a>
-        <a href="#22" onclick="hra.nacti_level(22);" class="level">22</a>
-        <a href="#23" onclick="hra.nacti_level(23);" class="level">23</a>
-        <a href="#24" onclick="hra.nacti_level(24);" class="level">24</a>
-        <a href="#25" onclick="hra.nacti_level(25);" class="level">25</a>
-        <a href="#26" onclick="hra.nacti_level(26);" class="level">26</a>
-        <a href="#27" onclick="hra.nacti_level(27);" class="level">27</a>
-        <a href="#28" onclick="hra.nacti_level(28);" class="level">28</a>
-        <a href="#29" onclick="hra.nacti_level(29);" class="level">29</a>
-        <a href="#30" onclick="hra.nacti_level(30);" class="level">30</a>
-        <a href="#31" onclick="hra.nacti_level(31);" class="level">31</a>
-        <a href="#32" onclick="hra.nacti_level(32);" class="level">32</a>
-        <a href="#33" onclick="hra.nacti_level(33);" class="level">33</a>
-        <a href="#34" onclick="hra.nacti_level(34);" class="level">34</a>
-        <a href="#35" onclick="hra.nacti_level(35);" class="level">35</a>
+        <script>
+        for (let i = 1; i < levels.length; i++) {
+          if(localStorage.getItem(i)=="vyreseno") {
+              document.write("<a href='#"+i+"' onclick='hra.nacti_level("+i+");' class='level level--solved' id='level_"+i+"'>"+i+"</a>");
+          } else {
+            document.write("<a href='#"+i+"' onclick='hra.nacti_level("+i+");' class='level' id='level_"+i+"'>"+i+"</a>");
+          }
+        }
+        </script>
       </div>
 
       <div class="editor">
@@ -77,6 +51,7 @@
       </div>
 
       <div class="controls">
+        <a href="#" onclick="clear_storage();" title="Vymaže doposud vyřešené levely.">smazat postup</a>
         <a href="#" onclick="toggle_code();" id="code">zobrazit kód</a>
         <a href="#" onclick="run();" id="start">spustit</a>
         <!-- <a href="#" onclick="reset();">zkusit znovu</a> -->
@@ -160,6 +135,7 @@
     pohyb_pes: [],
     index_pohyb_pes: 0,
     stop: 0,
+    level: 0,
 
     // nacti sandbox (vychozi jednoducha hra)
     nacti_sandbox: function(level) {
@@ -199,6 +175,12 @@
         this.nakresli_mapu();
         return;
       }
+
+      for (let i = 1; i < levels.length; i++) {
+        if(i==level) document.getElementById("level_"+i).style.fontWeight = "900";
+        else document.getElementById("level_"+i).style.fontWeight = "400";
+      }
+
       // TODO: stringify je pomalé, bylo by lepší udělat DeepCopy jinak
       this.deska = JSON.parse(JSON.stringify(levels[level].mapa));
       this.deska_original = JSON.parse(JSON.stringify(levels[level].mapa));
@@ -227,6 +209,7 @@
       // dostupné instrukce
       this.instrukcni_sada = this.update_available_instructions(levels[level].instrukcni_sada);
 
+      stop();
       this.init();
       this.nakresli_mapu();
     },
@@ -1066,6 +1049,9 @@ function smycka() {
         var smer = hra.smer_alana();
         hra.hlaseni(1, smer, x, y, "A mám je všechny!")
         //hra.instrukce=hra.prikazy.length+1;
+
+        localStorage.setItem(hra.level, "vyreseno");
+        document.getElementById("level_"+hra.level).classList.add("level--solved");
         return;
       }
 
@@ -1146,6 +1132,12 @@ function stop() {
   document.getElementById('start').style.display = "inline-block";
   document.getElementById('stop').style.display = "none";
 }
+
+function clear_storage() {
+  localStorage.clear();
+  location.reload();
+}
+
 </script>
 
 </body>
